2007-12-03  Mark Probst  <mark.probst@gmail.com>

	* generator/SymbolTable.cs: Added "where" to the list of mangled
	names.

2007-11-29  Mike Kestner  <mkestner@novell.com>

	* parser/gapi_pp.pl: collapse embedded multiline function fields 
	to a single line.  [Fixes #344853]

2007-11-29  Mike Kestner  <mkestner@novell.com>

	* generator/MethodBase.cs: move Name stuff from subclasses.
	Check for (G|S)et<UpperCaseLetter> in new Has props.
	* generator/Method.cs:
	* generator/VirtualMethod.cs: refactor out Name stuff. Use
	new Has(G|S)etterName props.
	* pango/Pango.metadata: workaround Has/Hash collision with
	the old broken getter check. [Fixes #344954]

2007-11-29  Mike Kestner  <mkestner@novell.com>

	* glib/Signal.cs: ignore GCHandles with null targets since
	their object has been collected.  [Fixes #344250 again]

2007-11-28  Mike Kestner  <mkestner@novell.com>

	* glib/Object.cs: take ref using method param to avoid
	NREs. [Fixes #344250]

2007-11-16  Mike Kestner  <mkestner@novell.com>

	* glib/Object.cs: use toggle refs for all objects.
	de-obsolete Data hash.  Add internal Signals hash.
	* glib/Signal.cs: switch to weak gchandles.
	* glib/WeakObject.cs: kill.

2007-11-16  Eskil Bylund  <eskil@letterboxes.org>

	* gtk/ListStore.custom:
	* gtk/TreeStore.custom: Implement InsertWithValues.
	* gtk/Gtk.metadata: Deprecate the old generated method.
	[Fixes #325040]

2007-11-12  Mike Kestner  <mkestner@novell.com>

	* sample/TreeModelDemo.cs: lt/gt typo bugfix [Fixes #333653]

2007-11-12  Mike Kestner  <mkestner@novell.com>

	* generator/SymbolTable.cs: remove GCallback mapping.
	* glib/GCallback.cs: kill, bad idea.

2007-11-12  Mike Kestner  <mkestner@novell.com>

	* glib/IOChannel.cs: IOChannel wrapper implementation.
	* glib/Makefile.am: build new files.
	* glib/Marshaller.cs: new string array marshaling methods.
	* glib/Spawn.cs: g_spawn* wrapper implementation.
	* sample/SpawnTests.cs: tests for the new GLib.Process class