@@ -96,6 +96,10 @@ BUILD_GTK_LIBS=`$PKG_CONFIG --libs gtk+-2.0`
 AC_SUBST(BUILD_GTK_CFLAGS)
 AC_SUBST(BUILD_GTK_LIBS)
 
+AC_CHECK_SIZEOF(off_t)
+OFF_T_FLAGS="-define:OFF_T_$ac_cv_sizeof_off_t"
+AC_SUBST(OFF_T_FLAGS)
+
 MONO_REQUIRED_VERSION=1.0
 PKG_CHECK_MODULES(MONO_DEPENDENCY, mono >= $MONO_REQUIRED_VERSION, has_mono=true, has_mono=false)
 
