@@ -85,7 +85,11 @@ namespace GtkSharp.Generation {
 			AddType (new LPUGen ("ulong"));
 			AddType (new LPUGen ("gulong"));
 			AddType (new LPUGen ("gsize"));
-			AddType (new AliasGen ("off_t", "ssize_t"));
+#if OFF_T_8
+			AddType (new AliasGen ("off_t", "long"));
+#else
+			AddType (new LPGen ("off_t"));
+#endif
 
 			// string types
 			AddType (new ConstStringGen ("const-gchar"));
