@@ -1,3 +1,9 @@
+2007-12-04  Mike Kestner  <mkestner@novell.com>
+
+	* configure.in.in: check for default off_t size
+	* generator/SymbolTable.cs: map off_t based on configure check.
+	* generator/Makefile.am: add OFF_T_FLAGS to compile.
+
 2007-12-03  Mark Probst  <mark.probst@gmail.com>
 
 	* generator/SymbolTable.cs: Added "where" to the list of mangled
